# tracex_parser

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  events.py  file_parser.py  parser.py  pyproject.toml  setup.cfg  trx_to_excel.py
.circleci/: config.yml
docs/source/: cli-interface.rst  conf.py  examples.rst  index.rst  py-interface.rst  quickstart.rst
examples/: custom_event.py
scripts/: run_tests.sh
snap/: snapcraft.yaml
src/tracex_parser/: events.py  file_parser.py  helpers.py
tests/: demo_filex.txt  demo_netx_tcp.txt  demo_netx_udp.txt  demo_threadx.txt  parse_app_output.py  test_compare_against_app_output.py  test_full_integration.py  test_temp.py
tracex_parser/: events.py  file_parser.py  helpers.py
