[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tracex_parser"
version = "2.3.0"
description = "Parser for ThreadX RTOS's trace buffers (aka TraceX)"
authors = ["Julianne Swinoga <julianneswinoga@gmail.com>"]
readme = "README.md"
license = "MIT"
include = [
    '*.trx',
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
sphinx = "^5.1.1"
sphinx_mdinclude = "^0.5.2"
sphinx-rtd-theme = "^1.0.0"
sh = "^1.14.3"
pytest-cov = "^3.0.0"
# Following are pegged at the latest version that supports Python 3.6
pytest = "==7.0.1"
GitPython = "==3.1.20"
pytest-mock = "==3.6.1"

[tool.poetry.urls]
"Repository" = "https://github.com/julianneswinoga/tracex_parser"
"Documentation" = "https://tracex_parser.readthedocs.io/en/latest"
"Bug Tracker" = "https://github.com/julianneswinoga/tracex_parser/issues"
