[metadata]
name = tracex-parser
version = 1.0.0
author = Cameron Swinoga
author_email = cameronswinoga@gmail.com
description = Parser for ThreadX RTOS's trace buffers (aka TraceX)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/cameronswinoga/tracex_parser
project_urls =
    Bug Tracker = https://gitlab.com/cameronswinoga/tracex_parser/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
